Updated HTML & CSS

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Outfit:wght@400,700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap"
       rel="stylesheet"
     />
 
@@ -24,8 +24,8 @@
     <title>Frontend Mentor | QR code component</title>
   </head>
   <body>
-    <main class="qr-card">
-      <img src="images/image-qr-code.png" alt="QR Code" class="qr-code-img" />
+    <main class="qr-code-card">
+      <img src="images/image-qr-code.png" alt="QR Code" class="card-img" />
       <div class="card-text">
         <h1 class="card-title">
           Improve your front-end skills by building projects
